--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -1,4 +1,3 @@
-
 .contatoCampo {
   margin: .8em auto;
   max-width: 600px;
@@ -6,7 +5,8 @@
 }
 
 .contatoCampo-label:before {
-  content:'';
+  content: '';
+  box-sizing: border-box;
   vertical-align: middle;
   display: inline-block;
   width: 20px;
@@ -17,17 +17,25 @@
   border: 1px solid #7D7D7D;
   color: transparent;
   line-height: 1;
-  transition: .2s ease-in;
+  transition: background-color .2s ease-in, color .2s ease-in;
 }
 
-.contatoCampo-checkbox:checked + .contatoCampo-label:before {
+.contatoCampo-checkbox:hover+.contatoCampo-label:before,
+.contatoCampo-checkbox:focus+.contatoCampo-label:before {
+  outline: 2px solid #333;
+}
+
+.contatoCampo-checkbox:checked+.contatoCampo-label:before {
   content: 'x';
   color: #fff;
   background-image: radial-gradient(circle, #2DA4E7, #2F80ED);
+  outline-color: #015fbe;
 }
 
 .contatoCampo-checkbox {
-  display: none;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
 }
 
 .contatoCampo-icone {
@@ -43,12 +51,12 @@
   display: block;
   width: 100%;
   text-align: left;
-} 
+}
 
 .contatoCampo label {
   margin-bottom: 5px;
   margin-left: 8px;
-} 
+}
 
 .contatoCampo input,
 .contatoCampo textarea {
@@ -58,18 +66,18 @@
   border-radius: 8px;
   border: 2px solid #ccc;
   outline: 0;
-} 
+}
 
 .contatoCampo input:focus,
 .contatoCampo textarea:focus {
   border: 2px solid #222;
-} 
+}
 
 .contatoCampo-campoDesabilitado {
   background-color: #ddd;
 }
 
-.contatoCampo-msg, 
+.contatoCampo-msg,
 .formContato-validacao {
   margin-left: 4px;
   margin-top: 4px;
@@ -114,4 +122,3 @@
   transform: translateY(112%) scale(.65);
   background-image: url(../img/validacao-erro.png);
 }
-
