--- a/css/dialogNewsletter.css
+++ b/css/dialogNewsletter.css
@@ -1,3 +1,7 @@
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, .4);
+}
+
 .dialogNewsletter {
   display: none;
 }
@@ -12,12 +16,12 @@
   background-color: #fff;
   border: 1px solid #8D8D8D;
   padding: 3em 1.5em 1.5em 1.5em;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .5); 
+  box-shadow: 0 0 5px rgba(0, 0, 0, .5);
   position: fixed;
-  display: inline-block;
+  /* display: inline-block; */
   top: 45%;
   left: 50%;
-  transform: translate(-50%,-52%);
+  transform: translate(-50%, -52%);
   z-index: 3;
   transition: .3s ease-in;
   color: #222;
@@ -37,9 +41,9 @@
   background-color: rgba(0, 0, 0, .4);
 }
 
-.overlayDialog + .dialogNewsletter {
+.overlayDialog+.dialogNewsletter {
   display: block;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 .dialogNewsletter-titulo {
@@ -79,7 +83,7 @@
   padding: 8px;
   width: 100%;
   height: 3.1em;
-  background: url(../img/email.png) no-repeat center; 
+  background: url(../img/email.png) no-repeat center;
   transition: .2s ease-in;
 }
 
@@ -122,7 +126,7 @@
 
 .dialogNewsletter-fechar:hover:before,
 .dialogNewsletter-fechar:focus:before {
-  color: #ce3434;  
+  color: #ce3434;
   cursor: pointer;
 }
 
@@ -130,7 +134,7 @@
 
   .dialogNewsletter-body {
     width: 533px;
-  }  
+  }
 
   .dialogNewsletter-form {
     display: flex;
