--- a/css/secaoContato.css
+++ b/css/secaoContato.css
@@ -1,4 +1,3 @@
-
 .secaoContato {
   background-color: #F7F4F4;
   text-align: center;
@@ -20,6 +19,7 @@
   line-height: 1.6;
   text-align: center;
   margin: 0 auto;
+  background-color: red;
 }
 
 .secaoContato-form-cta {
