--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -84,7 +84,7 @@
   font-size: .9em;
   font-weight: bold;
   color: #FD1242;
-  display: inline-block;
+  display: none
 }
 
 .contatoCampo .contatoCampo--validouFoi {
